v5.11.2/python/_sources/paraview.simple.ResampleWithDataset.rst.txt
paraview.simple.ResampleWithDataset
===================================

.. currentmodule:: paraview.simple

.. autofunction:: ResampleWithDataset

Data Descriptors
----------------


   
   CategoricalData
       Control whether the source point data is to be
       treated as categorical. If the data is categorical, then the
       resultant data will be determined by a nearest neighbor
       interpolation scheme rather than by linear interpolation.
   
   CellLocator
       The cell locator to use for finding cells for probing.
   
   ComputeTolerance
       Set whether to compute the tolerance or to use a user provided
       value. On by default.
   
   DestinationMesh
       This property specifies the dataset whose geometry will
       be used in determining positions to probe. The mesh comes from this
       dataset.
   
   MarkBlankPointsAndCells
       When set, points that did not get valid values during resampling, and
       cells containing such points, are marked as blank.
   
   PassCellArrays
       When set the input's cell data arrays are shallow copied to the output.
   
   PassFieldArrays
       Set whether to pass the field-data arrays from the Input i.e. the input
       providing the geometry to the output. On by default.
   
   PassPartialArrays
       Set whether to partial data arrays from the Input i.e. the input
       providing the geometry to the output. Off by default.
   
   PassPointArrays
       When set the input's point data arrays are shallow copied to the output.
   
   SnapToCellWithClosestPoint
       Set whether to snap to the cell with the closest point, if no cell has been found while
       FindCell is executed. Note: This is useful only when the source is a vtkPointSet.
   
   SourceDataArrays
       This property specifies the dataset from which to obtain
       probe values. The data attributes come from this dataset.
   
   Tolerance
       Set the tolerance to use for
       vtkDataSet::FindCell
   
   

Data Descriptors inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   __dict__
       dictionary for instance variables (if defined)
   
   __weakref__
       list of weak references to the object (if defined)
   

Methods
-------


   
   Initialize = aInitialize(self, connection=None, update=True)
   
   

Methods inherited from SourceProxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   FileNameChanged(self)
       Called when the filename of a source proxy is changed.
   
   GetCellDataInformation(self)
       Returns the associated cell data information.
   
   GetDataInformation(self, idx=None)
       This method returns a DataInformation wrapper around a
       vtkPVDataInformation
   
   GetFieldDataInformation(self)
       Returns the associated cell data information.
   
   GetPointDataInformation(self)
       Returns the associated point data information.
   
   UpdatePipeline(self, time=None)
       This method updates the server-side VTK pipeline and the associated
       data information. Make sure to update a source to validate the output
       meta-data.
   
   UpdatePipelineInformation(self)
       This method updates the meta-data of the server-side VTK pipeline and
       the associated information properties
   
   __getitem__(self, idx)
       Given a slice, int or string, returns the corresponding
       output port
   
   

Methods inherited from Proxy
~~~~~~~~~~~~~~~~~~~~~~~~~~~~


   
   GetProperty(self, name)
       Given a property name, returns the property object.
   
   GetPropertyValue(self, name)
       Returns a scalar for properties with 1 elements, the property
       itself for vectors.
   
   InitializeFromProxy(self, aProxy, update=True)
       Constructor. Assigns proxy to self.SMProxy, updates the server
       object as well as register the proxy in _pyproxies dictionary.
   
   ListProperties(self)
       Returns a list of all property names on this proxy.
   
   SetPropertyWithName(self, pname, arg)
       Generic method for setting the value of a property.
   
   __del__(self)
       Destructor. Cleans up all observers as well as remove
       the proxy from the _pyproxies dictionary
   
   __eq__(self, other)
       Returns true if the underlying SMProxies are the same.
   
   __getattr__(self, name)
       With the exception of a few overloaded methods,
       returns the SMProxy method
   
   __hash__(self)
       Return hash(self).
   
   __init__(self, \*\*args)
       Default constructor. It can be used to initialize properties
       by passing keyword arguments where the key is the name of the
       property. In addition registrationGroup and registrationName (optional)
       can be specified (as keyword arguments) to automatically register
       the proxy with the proxy manager.
   
   __iter__(self)
       Creates an iterator for the properties.
   
   __ne__(self, other)
       Returns false if the underlying SMProxies are the same.
   
   __setattr__(self, name, value)
       Implement setattr(self, name, value).
   
   add_attribute(self, name, value)
   
   



For the full list of servermanager proxies, please refer to :doc:`Available readers, sources, writers, filters and animation cues <paraview.servermanager_proxies>`